// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CLI qnm <module>] should add dependents information when using the --why option 1`] = `
"test
└── 1.0.0 (devDependencies, npm install test)

"
`;

exports[`CLI qnm <module>] should add dependents information when using the --why option on yarn installed package 1`] = `
"import-from
└── 3.0.0 (import-cwd)

"
`;

exports[`CLI qnm <module>] should add dependents information when using thw -w option 1`] = `
"test
└── 1.0.0 (devDependencies, npm install test)

"
`;

exports[`CLI qnm <module>] should show an indication in case there is a symlink 1`] = `
"test
└── 1.0.0 -> ../../symlink-origin/node_modules/test

"
`;

exports[`CLI qnm <module>] should show get matchs when using the match command 1`] = `
"test
└── 1.0.0

"
`;

exports[`CLI qnm <module>] should show the version on a single module when called with a string 1`] = `
"test
└── 1.0.0

"
`;

exports[`CLI qnm <module>] should work in monorepo and print subpackages modules 1`] = `
"package-foo
└── 1.0.0

package-a
└─┬ package-foo
  └── 2.0.0

"
`;

exports[`CLI qnm <module>] should work in monorepo with yarn workspaces 1`] = `
"package-foo
└── 1.0.0

package-a
└─┬ package-foo
  └── 2.0.0

"
`;

exports[`CLI qnm list should --disable-colors 1`] = `
"[4manotherDependency[24m
└── 1.0.0

[4mdependency1[24m
└── 1.0.0

[4mdependency2[24m
└── 1.0.0

[4mdevDependency1[24m
└── 1.0.0

[4mdevDependency2[24m
└── 1.0.0

[4mdep-of-dep[24m
├─┬ [90manotherDependency[39m
│ └── 1.0.0
├─┬ [90mdependency1[39m
│ └── 1.0.0
├─┬ [90mdependency2[39m
│ └── 1.0.0
├─┬ [90mdevDependency1[39m
│ └── 1.0.0
└─┬ [90mdevDependency2[39m
  └── 1.0.0

[4mdep-of-dep-of-dep[24m
├─┬ [90manotherDependency[39m
│ └─┬ [90mdep-of-dep[39m
│   └── 1.0.0
├─┬ [90mdependency1[39m
│ └─┬ [90mdep-of-dep[39m
│   └── 1.0.0
├─┬ [90mdependency2[39m
│ └─┬ [90mdep-of-dep[39m
│   └── 1.0.0
├─┬ [90mdevDependency1[39m
│ └─┬ [90mdep-of-dep[39m
│   └── 1.0.0
└─┬ [90mdevDependency2[39m
  └─┬ [90mdep-of-dep[39m
    └── 1.0.0

"
`;

exports[`CLI qnm list should list a monorepo 1`] = `
"package-bar
└── 1.0.0

package-baz
└── 1.0.0

package-foo
└── 1.0.0

package-a
└─┬ package-foo
  └── 2.0.0

package-b
└─┬ package-bar
  └── 3.0.0

"
`;

exports[`CLI qnm list should list dependencies in a yarn installed package and show "why" information 1`] = `
"import-cwd
└── 3.0.0

import-from
└── 3.0.0 (import-cwd)

resolve-from
└── 5.0.0 (import-from)

"
`;

exports[`CLI qnm list should show all modules in node_modules directory 1`] = `
"@scope/test
└── 1.0.0

another
└── 1.0.0

test
├── 1.0.0
└─┬ another
  └── 1.0.0

"
`;

exports[`CLI qnm list should show modules mentioned in package.json 1`] = `
"dependency1
└── 1.0.0

dependency2
└── 1.0.0

devDependency1
└── 1.0.0

devDependency2
└── 1.0.0

"
`;

exports[`CLI qnm match should match in monorepo and print subpackages modules 1`] = `
"package-bar
└── 1.0.0

package-baz
└── 1.0.0

package-foo
└── 1.0.0

package-a
└─┬ package-foo
  └── 2.0.0

package-b
└─┬ package-bar
  └── 3.0.0

"
`;
